fixed margins and overflow

--- a/css/style.scss
+++ b/css/style.scss
@@ -85,10 +85,10 @@ footer {
         border-radius: 5px;
         box-shadow: 0px 30px 40px -20px rgb(46, 62, 68);
         padding: 15px 30px;
-        margin: auto 20px;
+        margin: 1rem 20px;
 
         max-width: 500px;
-        height: 300px;
+        min-height: 300px;
 
         .imgContainer {
             overflow: hidden;
